--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: "Michael's Personal Website"
 author: "Michael Yang"
-description: "Work in progress" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+email: "mic14cal14@gmail.com"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
 # linkedin_username: "linkedinuser"
